CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_BINARY_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}
	${CMAKE_SOURCE_DIR}/PVVTKExtensionsRendering
	)

FILE(GLOB Header "*.h")
FILE(GLOB Src "*.cxx" "*.cpp")

ADD_DEFINITIONS(-DVTKPVCLIENTSERVERCORERENDERING_EXPORTS)

ADD_LIBRARY(PVClientServerCoreRendering SHARED ${Header} ${Src})
TARGET_LINK_LIBRARIES(PVClientServerCoreRendering 
	${VTK_LIBARIES}
	PVVTKExtensionsRendering
	)
