CMAKE_MINIMUM_REQUIRED(VERSION 3.10)


INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_BINARY_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}
	)

FILE(GLOB Header "*.h")
FILE(GLOB Src "*.cxx" "*.cpp")

ADD_DEFINITIONS(-DVTKPVVTKEXTENSIONSRENDERING_EXPORTS)

ADD_LIBRARY(PVVTKExtensionsRendering SHARED ${Header} ${Src})
TARGET_LINK_LIBRARIES(PVVTKExtensionsRendering 
	${VTK_LIBRARIES}
	${ICET_CORE_LIBS}
	${ICET_GL_LIBS}
	${ICET_MPI_LIBS}
	)

